<resources>
    <string name="app_name">Money Map</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string-array name="CountryCodes">
        <item>+91</item>
        <item>+93</item>
        <item>+355</item>
        <item>+213</item>
        <item>+376</item>
        <item>+244</item>
        <item>+672</item>
        <item>+54</item>
        <item>+374</item>
        <item>+297</item>
        <item>+61</item>
        <item>+43</item>
        <item>+994</item>
        <item>+973</item>
        <item>+880</item>
        <item>+375</item>
        <item>+32</item>
        <item>+501</item>
        <item>+229</item>
        <item>+975</item>
        <item>+591</item>
        <item>+387</item>
        <item>+267</item>
        <item>+55</item>
        <item>+673</item>
        <item>+359</item>
        <item>+226</item>
        <item>+95</item>
        <item>+257</item>
        <item>+855</item>
        <item>+237</item>
        <item>+1</item>
        <item>+238</item>
        <item>+236</item>
        <item>+235</item>
        <item>+56</item>
        <item>+86</item>
        <item>+61</item>

        <item>+57</item>
        <item>+269</item>
        <item>+242</item>
        <item>+243</item>
        <item>+682</item>
        <item>+506</item>
        <item>+385</item>
        <item>+53</item>
        <item>+357</item>
        <item>+420</item>
        <item>+45</item>
        <item>+253</item>
        <item>+670</item>
        <item>+593</item>
        <item>+20</item>
        <item>+503</item>
        <item>+240</item>
        <item>+291</item>
        <item>+372</item>
        <item>+251</item>
        <item>+500</item>
        <item>+298</item>
        <item>+679</item>
        <item>+358</item>
        <item>+33</item>
        <item>+689</item>
        <item>+241</item>

        <item>+245</item>
        <item>+592</item>
        <item>+509</item>
        <item>+504</item>
        <item>+852</item>
        <item>+36</item>

        <item>+62</item>
        <item>+98</item>
        <item>+964</item>
        <item>+353</item>
        <item>+44</item>
        <item>+972</item>
        <item>+39</item>
        <item>+225</item>
        <item>+81</item>
        <item>+962</item>
        <item>+7</item>
        <item>+254</item>
        <item>+686</item>
        <item>+965</item>
        <item>+996</item>
        <item>+371</item>
        <item>+961</item>
        <item>+266</item>
        <item>+231</item>
        <item>+218</item>
        <item>+423</item>
        <item>+370</item>
        <item>+352</item>
        <item>+853</item>
        <item>+389</item>
        <item>+261</item>
        <item>+265</item>

    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="openDrawer">opendrawer</string>
    <string name="closeDrawer">drawerclose</string>
    <string name="agreement_declaration">By signing in you are agreeing to our term listed in the</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="button_spend_desc">This button helps you to add your daily spends</string>
    <string name="add_spend_button_titile">Add Spends</string>
    <string name="spend_details_desc">This will show your monthly spend details</string>
    <string name="spend_details_btn_title">Spend Details</string>
    <string name="fb_login_protocol_scheme">fb279240052452727</string>

    <string name="facebook_app_id">279240052452727</string>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>


    <string-array name="nav_drawer_items">
        <item >Account statement</item>
        <item >Bills</item>
        <item >Transaction sms</item>
        <item >Spend summary </item>
        <item >Settings</item>
        <item >About</item>
        <item >Logout</item>

    </string-array>


    <array name="nav_drawer_icons">
        <item>@drawable/account_stmt</item>
        <item>@drawable/bill_icon</item>
        <item>@drawable/transaction_sms</item>
        <item>@drawable/spend_summary</item>
        <item>@drawable/settings</item>
        <item>@drawable/new_about</item>
        <item>@drawable/info</item>

    </array>

</resources>
