<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Sign in"
                        android:textSize="30dp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/email_login_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/inputTextEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <AutoCompleteTextView
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:singleLine="true"
                                android:textColor="@color/colorPrimary"
                                android:imeOptions="actionNext"/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/inputTextPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/prompt_password"
                                android:imeActionId="@+id/login"
                                android:imeActionLabel="@string/action_sign_in_short"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:maxLines="1"
                                android:textColor="@color/colorPrimary"
                                android:singleLine="true"
                                />

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/showPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="Show Password"
                        android:visibility="gone"/>

                    <CheckBox
                        android:layout_gravity="center"
                        android:id="@+id/keepMeLoggedIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Keep Me Logged In" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonSignIn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="@dimen/dp_80"
                    android:layout_marginRight="@dimen/dp_80"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="signIn"
                    android:text="@string/action_sign_in"
                    android:textColor="#fff"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="@dimen/dp_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="OR"
                    android:textSize="20sp"/>
                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="@dimen/dp_80"
                    android:layout_marginRight="@dimen/dp_80"
                    android:layout_marginBottom="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:linksClickable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/sp_15" />

                <View
                    android:layout_width="160dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@android:color/darker_gray"
                    android:visibility="gone"/>

                <TextView
                    android:layout_marginTop="@dimen/dp_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/agreement_declaration" />

                <TextView
                    android:id="@+id/legalInfo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="center"
                    android:text="Legal Information Section "
                    android:textColor="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="160dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:gravity="center"
                        android:text="New User ?" />

                    <View
                        android:layout_width="160dp"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:background="@android:color/darker_gray" />
                </LinearLayout>

                <Button
                    android:id="@+id/buttonCreateUser"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="@dimen/dp_80"
                    android:layout_marginRight="@dimen/dp_80"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="buttonCreateUser"
                    android:text="Sign Up With email"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>