<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#459ee0"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/moneymapping" />


            </LinearLayout>


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_50"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#fff" />

            <TextView
                android:id="@+id/inputTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ff0000" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginRight="@dimen/dp_50"
                android:gravity="center"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#fff" />

            <TextView
                android:id="@+id/inputTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#ff0000" />

            <Button
                android:id="@+id/buttonSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/dp_80"
                android:layout_marginRight="@dimen/dp_80"
                android:layout_marginTop="16dp"
                android:background="@drawable/mybutton"
                android:onClick="signIn"
                android:text="@string/action_sign_in"
                android:textColor="#fff"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/keepMeLoggedIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Keep Me Logged In"
                android:textColor="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp_5">

                <TextView
                    android:id="@+id/buttonCreateUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.5"
                    android:onClick="buttonCreateUser"
                    android:gravity="center"
                    android:text="Sign Up"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_toRightOf="@+id/buttonCreateUser"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/buttonCreateUser"
                    android:text="Forgot?"
                    android:textColor="@color/colorPrimaryDark"

                    android:textSize="15sp" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center|bottom"
                android:text="...or you can "
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="@dimen/dp_80"
                android:layout_marginRight="@dimen/dp_80"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="facebook" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>